Master page and web form added.

--- a/RonGiladiWebSite/MasterPage.master
+++ b/RonGiladiWebSite/MasterPage.master
@@ -9,6 +9,7 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
+    <h1>Master Start</h1>
     <form id="form1" runat="server">
     <div>
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
@@ -16,5 +17,6 @@
         </asp:ContentPlaceHolder>
     </div>
     </form>
+    <h1>Master End</h1>
 </body>
 </html>
