--- a/RonGiladiWebSite/MasterPage.master
+++ b/RonGiladiWebSite/MasterPage.master
@@ -7,30 +7,83 @@
     <title></title>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
-    
+    <style>
+        /* רקע לעמוד, נעזרתי בבניה מלאכותית רק לעיצוב  */
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+        }
+        table {
+            width: 90%;
+            height: 800px;
+            border: 2px solid #333333;
+            border-collapse: collapse;
+            background-color: #ffffff;
+        }
+        table td {
+            border: 1px solid #aaaaaa;
+            padding: 10px;
+            vertical-align: top;
+        }
+        h1 {
+            color: #2c3e50;
+            margin: 0;
+            padding: 20px 0;
+        }
+        #menu h2 {
+            color: #2c3e50;
+        }
+        #menu a img {
+            width: 80px;
+            border: 1px solid #ccc;
+            padding: 2px;
+            transition: 0.2s;
+        }
+        #menu a img:hover {
+            border-color: #2c3e50;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body> 
     <center>
-    <table width="90%" height="800px" border="1">
-        <tr height="100px"> 
-           <td clospan="2" align="center"> 
-               <h1>Ron giladi's website</h1>
-           </td>
-        </tr>
-        <tr>
-            <td>
-                <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-
-                </asp:ContentPlaceHolder>
-            </td>
-            <td width="10%">
-                <h2>ניווט</h2><br />
-                <a href="HomePage.aspx"><img src="Images/מאמר%201%20תמונה.png" class="button" /></a><br />
-                <a href="form.aspx">form.aspx</a><br />
-                <a href="makingContact">makingCotact.aspx</a><br />
-            </td>
-        </tr>
-    </table>
+   <table>
+    <tr height="100px"> 
+        <td colspan="2" align="center"> 
+            <h1>Ron giladi's website</h1>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top">
+            <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder>
+        </td>
+        <td id="menu" width="15%" valign="top" align="center">
+            <h2>ניווט</h2><br />
+            <a href="HomePage.aspx">
+                <img src="Images/דף הבית תמונה.png" />
+            </a><br /><br />
+            <a href="מאמר1.aspx">
+                <img src="Images/מאמר 1 תמונה.png" />
+            </a><br /><br />
+            <a href="מאמר2.aspx">
+                <img src="Images/מאמר 2 תמונה.png" />
+            </a><br /><br />
+            <a href="מאמר3.aspx">
+                <img src="Images/מאמר 3 תמונה.png" />
+            </a><br /><br />
+            <a href="form.aspx">
+                <img src="Images/Forms.aspx תמונה.png" />
+            </a><br /><br />
+            <a href="יצירת קשר.aspx">
+                <img src="Images/יצירת קשר תמונה.png" />
+            </a><br /><br />
+            <a href="מדיניות.aspx">
+                <img src="Images/מדיניות פרטיות תמונה.png" />
+            </a>
+        </td>
+    </tr>
+</table>
         </center>
 </body>
 </html>
